Fixed white space on the bottom of the map,adjust header and footer margin

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,12 +52,13 @@ header{
 
 /* Colores y bordes de mapa */
 .mapamexico {
+    display: block;
     fill: rgb(255, 248, 231);
     stroke: black;
     stroke-width: 2;
     /* background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(237,3,32,0.87) 20.8%, rgba(242,121,1,0.84) 74.4% ); */
     background-color: #9EDDFF;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .nombres-estados{
